# k4a_ros

./: .gitignore  .gitmodules  0001-removed-conflict-for-cuda-10.2.patch  CMakeLists.txt  README.md  manifest.xml
.github/workflows/: buildTest.yml
config/: kinect.lua
src/: YoloToTracks.cc  cuda_depth_to_lidar.cc  cuda_tests.cc  depth_to_costmap.cc  depth_to_lidar.cc  get_calibration.cc  k4a_wrapper.cc  k4a_wrapper.h  main.cc  processing_kernels.h  processing_kernels_cuda.cu  recording_to_lidar.cc  save_rgbd_images.cc  skeleton_detections.cpp  skeleton_tracker.cpp  stream_pcl.cc  test_skeleton.cpp
src/YoloToHumanTracks/: YoloToHumanTracks.py  manifest.xml
src/k4a_image/: KinectWrapper.cpp  KinectWrapper.h
